tests/lean/586.lean.expected.out
`Nat.succ : Lean.Name
Nat.zero : Nat
586.lean:13:0-13:3: error: unknown constant 'succ✝'
586.lean:13:0-13:3: error: unknown identifier 'zero✝'
